--- a/package.json
+++ b/package.json
@@ -2,7 +2,13 @@
   "name": "@dgr/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "postinstall": "electron-builder install-app-deps"
+  },
+  "build": {
+    "appId": "dgr-id",
+    "productName": "dgr"
+  },
   "private": true,
   "dependencies": {
     "@angular/animations": "~17.1.0",
@@ -41,13 +47,17 @@
     "@types/node": "18.16.9",
     "@typescript-eslint/eslint-plugin": "^6.13.2",
     "@typescript-eslint/parser": "^6.13.2",
+    "electron": "^28.2.3",
+    "electron-builder": "^24.13.3",
     "eslint": "~8.48.0",
     "eslint-config-prettier": "^9.0.0",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
+    "jest-environment-node": "^29.4.1",
     "jest-preset-angular": "~13.1.4",
     "jsonc-eslint-parser": "^2.1.0",
     "nx": "18.0.1",
+    "nx-electron": "^18.0.1",
     "prettier": "^2.6.2",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
